// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphHost Tests Base Rendering 1`] = `
<GraphHost
  options={{}}
>
  <svg
    className="msg graphHost"
    preserveAspectRatio="xMidYMid"
    viewBox="0 0 1200 900"
  />
</GraphHost>
`;

exports[`GraphHost Tests Render Combinations 1`] = `
<GraphHost
  options={
    {
      "colors": [
        "red",
        "green",
        "blue",
      ],
      "series": [
        {
          "colors": [
            "red",
            "green",
            "blue",
          ],
          "id": "graph1",
          "type": "bar",
        },
        {
          "colors": [
            "red",
            "green",
            "blue",
          ],
          "id": "graph2",
          "type": "line",
        },
        {
          "colors": [
            "red",
            "green",
            "blue",
          ],
          "id": "graph3",
          "type": "pie",
        },
      ],
    }
  }
>
  <svg
    className="msg graphHost"
    preserveAspectRatio="xMidYMid"
    viewBox="0 0 1200 900"
  />
</GraphHost>
`;
